# libDwm

./: .gitignore  ChangeLog  IN-PROGRESS  Makefile  Makefile.vars.in  README.md  configure  configure.ac  dwm.m4  getvers.sh  latest_release  mkrelease.sh
apps/: Makefile
apps/dwmcflags/: .gitignore  Makefile  dwmcflags.1  dwmcflags.cc
apps/dwmnet/: .gitignore  Makefile  dwmnet.cc
apps/dwmspath/: .gitignore  Makefile  dwmspath.cc
apps/dwmwhat/: .gitignore  Makefile  dwmwhat.1  dwmwhat.cc
classes/include/: .gitignore  DwmASIO.hh  DwmASIOCapable.hh  DwmASIOReadable.hh  DwmASIOWritable.hh  DwmArgumentIO.hh  DwmArguments.hh  DwmBZ2IO.hh  DwmBZ2IOCapable.hh  DwmBZ2Readable.hh  DwmBZ2Writable.hh  DwmBase64.hh  DwmBootTime.hh  DwmCgi.hh  DwmConcurrentQueue.hh  DwmConditionVariable.hh  DwmCvsTag.hh  DwmDaemonUtils.hh  DwmDataLog.hh  DwmDateTime.hh  DwmDescriptor.hh  DwmDescriptorIO.hh  DwmDescriptorIOCapable.hh  DwmDescriptorReadable.hh  DwmDescriptorWritable.hh  DwmDiff.hh  DwmDirectoryEntry.hh  DwmDocMainPage.hh  DwmEngFormat.hh  DwmException.hh  DwmExecutor.hh  DwmFFIVar.hh  DwmFifo.hh  DwmFileIO.hh  DwmFileIOCapable.hh  DwmFileLogger.hh  DwmFileReadable.hh  DwmFileRoller.hh  DwmFileWritable.hh  DwmGZIO.hh  (+100 more)
classes/src/: .gitignore  DwmASIO.cc  DwmBZ2IO.cc  DwmBase64.cc  DwmBootTime.cc  DwmCgi.ll  DwmConditionVariable.cc  DwmCvsTag.cc  DwmDaemonUtils.cc  DwmDateTime.cc  DwmDescriptor.cc  DwmDescriptorIO.cc  DwmDirectoryEntry.cc  DwmEngFormat.cc  DwmExecutor.cc  DwmExecutor.ll  DwmFileIO.cc  DwmFileLogger.cc  DwmFileRoller.cc  DwmGZIO.cc  DwmGetAddrInfo.cc  DwmGitVersion.cc  DwmGroup.cc  DwmHostPinger.cc  DwmIO.cc  DwmIpAddress.cc  DwmIpPrefix.cc  DwmIpv4Address.cc  DwmIpv4IcmpDestinationUnreachable.cc  DwmIpv4IcmpEchoReply.cc  DwmIpv4IcmpEchoRequest.cc  DwmIpv4IcmpMessage.cc  DwmIpv4IcmpRedirect.cc  DwmIpv4IcmpSourceQuench.cc  DwmIpv4IcmpTimeExceeded.cc  DwmIpv4PacketHeader.cc  DwmIpv4Prefix.cc  DwmIpv4TcpHeader.cc  DwmIpv4TcpPacket.cc  DwmIpv4TcpPayload.cc  (+51 more)
classes/tests/: .gitignore  IPV4_prefixes.20051007  IPV6_addrs.20210122  IPV6_prefixes.20210122  Makefile  TestASIO.cc  TestBase64.cc  TestBootTime.cc  TestConcurrentQueue.cc  TestDwmBZ2IO.cc  TestDwmDataLog.cc  TestDwmDateTime.cc  TestDwmDescriptor.cc  TestDwmDiff.cc  TestDwmDirectoryEntry.cc  TestDwmFileLogger.cc  TestDwmGZIO.cc  TestDwmIO.cc  TestDwmLoadBalancer.cc  TestDwmLocalInterfaces.cc  TestDwmMutex.cc  TestDwmOptArgs.cc  TestDwmPacer.cc  TestDwmPassword.cc  TestDwmRusage.cc  TestDwmSignal.cc  TestDwmSocket.cc  TestDwmSunriseSunset.cc  TestDwmTermios.cc  TestEngFormat.cc  TestEnumIO.cc  TestFFIVar.cc  TestFSyslog.cc  TestFileRoller.cc  TestGetAddrInfo.cc  TestGitVersion.cc  TestGroup.cc  TestHostPinger.cc  TestIODeque.cc  TestIOList.cc  (+63 more)
doc/: .gitignore  Doxyfile.in  Makefile  doxygenDocs.css  footer.html  libDwm.tag
doc/examples/: DwmIOExample1.cc  DwmIOExample2.cc  DwmIOExample3.cc  UnitAssertExample1.cc
doc/html/: DwmASIOCapable_8hh.html  DwmASIOCapable_8hh.js  DwmASIOCapable_8hh__dep__incl.map  DwmASIOCapable_8hh__incl.map  DwmASIOCapable_8hh_source.html  DwmASIO_8hh.html  DwmASIO_8hh.js  DwmASIO_8hh__dep__incl.map  DwmASIO_8hh__incl.map  DwmASIO_8hh_source.html  DwmArgumentIO_8hh.html  DwmArgumentIO_8hh__dep__incl.map  DwmArgumentIO_8hh__incl.map  DwmArgumentIO_8hh_source.html  DwmArguments_8hh.html  DwmArguments_8hh.js  DwmArguments_8hh__incl.map  DwmArguments_8hh_source.html  DwmBZ2IOCapable_8hh.html  DwmBZ2IOCapable_8hh.js  DwmBZ2IOCapable_8hh__dep__incl.map  DwmBZ2IOCapable_8hh__incl.map  DwmBZ2IOCapable_8hh_source.html  DwmBZ2IO_8hh.html  DwmBZ2IO_8hh.js  DwmBZ2IO_8hh__dep__incl.map  DwmBZ2IO_8hh__incl.map  DwmBZ2IO_8hh_source.html  DwmBase64_8hh.html  DwmBase64_8hh.js  DwmBase64_8hh__incl.map  DwmBase64_8hh_source.html  DwmCgi_8hh.html  DwmCgi_8hh.js  DwmCgi_8hh__incl.map  DwmCgi_8hh_source.html  DwmConcurrentQueue_8hh.html  DwmConcurrentQueue_8hh.js  DwmConcurrentQueue_8hh__incl.map  DwmConcurrentQueue_8hh_source.html  (+1123 more)
doc/latex/: DwmASIOCapable_8hh.tex  DwmASIOCapable_8hh__dep__incl.md5  DwmASIOCapable_8hh__incl.md5  DwmASIOCapable_8hh_source.tex  DwmASIO_8hh.tex  DwmASIO_8hh__dep__incl.md5  DwmASIO_8hh__incl.md5  DwmASIO_8hh_source.tex  DwmArgumentIO_8hh.tex  DwmArgumentIO_8hh__dep__incl.md5  DwmArgumentIO_8hh__incl.md5  DwmArgumentIO_8hh_source.tex  DwmArguments_8hh.tex  DwmArguments_8hh__incl.md5  DwmArguments_8hh_source.tex  DwmBZ2IOCapable_8hh.tex  DwmBZ2IOCapable_8hh__dep__incl.md5  DwmBZ2IOCapable_8hh__incl.md5  DwmBZ2IOCapable_8hh_source.tex  DwmBZ2IO_8hh.tex  DwmBZ2IO_8hh__dep__incl.md5  DwmBZ2IO_8hh__incl.md5  DwmBZ2IO_8hh_source.tex  DwmBase64_8hh.tex  DwmBase64_8hh__incl.md5  DwmBase64_8hh_source.tex  DwmCgi_8hh.tex  DwmCgi_8hh__incl.md5  DwmCgi_8hh_source.tex  DwmConcurrentQueue_8hh.tex  DwmConcurrentQueue_8hh__incl.md5  DwmConcurrentQueue_8hh_source.tex  DwmCvsTag_8hh.tex  DwmCvsTag_8hh__incl.md5  DwmCvsTag_8hh_source.tex  DwmDaemonUtils_8hh.tex  DwmDaemonUtils_8hh_source.tex  DwmDataLog_8hh.tex  DwmDataLog_8hh__incl.md5  DwmDataLog_8hh_source.tex  (+664 more)
doc/man/man3/: DwmASIO.hh.3  DwmASIOCapable.hh.3  DwmArgumentIO.hh.3  DwmArguments.hh.3  DwmBZ2IO.hh.3  DwmBZ2IOCapable.hh.3  DwmBase64.hh.3  DwmCgi.hh.3  DwmConcurrentQueue.hh.3  DwmCvsTag.hh.3  DwmDaemonUtils.hh.3  DwmDataLog.hh.3  DwmDateTime.hh.3  DwmDescriptor.hh.3  DwmDescriptorIO.hh.3  DwmDescriptorIOCapable.hh.3  DwmDiff.hh.3  DwmDirectoryEntry.hh.3  DwmDocMainPage.hh.3  DwmEngFormat.hh.3  DwmExecutor.hh.3  DwmFFIVar.hh.3  DwmFileIO.hh.3  DwmFileIOCapable.hh.3  DwmFileLogger.hh.3  DwmFileRoller.hh.3  DwmGZIO.hh.3  DwmGZIOCapable.hh.3  DwmGetAddrInfo.hh.3  DwmGitVersion.hh.3  DwmGroup.hh.3  DwmHostPinger.hh.3  DwmIO.hh.3  DwmIOUtils.hh.3  DwmIpAddress.hh.3  DwmIpPrefix.hh.3  DwmIpv4AddrMap.hh.3  DwmIpv4Address.hh.3  DwmIpv4IcmpDestinationUnreachable.hh.3  DwmIpv4IcmpEchoReply.hh.3  (+199 more)
packaging/: .gitignore  Makefile  debcontrol.in  fbsd_manifest.in  libDwm.pc.in
